tests/bad/class_function_without_self.rat
/// fail: First argument of class method must be self

class Test {
    def new() {}
}
